MULTI-DATA WORKS!
RandomImage uses it and it works for it.

--- a/src/GUI/cfg.html
+++ b/src/GUI/cfg.html
@@ -19,6 +19,16 @@
 			padding: 0.5rem;
 			color: white;
 		}
+		/*noinspection CssUnusedSymbol*/
+		.status-changed {
+			border: 2px solid #faa05a;
+			border-radius: 7px;
+		}
+		/*noinspection CssUnusedSymbol*/
+		.status-error {
+			border: 2px solid #d54567;
+			border-radius: 7px;
+		}
 	</style>
 	<script src="js/uikit.min.js"></script>
 	<script src="js/uikit-icons.min.js"></script>
