Renamed "data" to "assets" in everything under Data/ (now Assets/).

--- a/src/GUI/config.html
+++ b/src/GUI/config.html
@@ -261,7 +261,7 @@
 							</ul>
 						</div>
 					</div>
-						<!-- User Data --> <div>
+						<!-- User Assets --> <div>
 							<!-- Single Image --> <div class="uk-child-width-expand uk-grid uk-margin-small-top uk-flex-nowrap">
 								<h3 class="uk-width-1-6"><span>Image File</span></h3>
 								<div>
